--- a/package.json
+++ b/package.json
@@ -27,11 +27,14 @@
     "helmet": "^3.21.2",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.20.15",
-    "sqlite3": "^4.1.1",
-    "supertest": "^4.0.2"
+    "sqlite3": "^4.1.1"
   },
   "devDependencies": {
     "jest": "^25.4.0",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "supertest": "^4.0.2"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
